@@ -113,9 +113,17 @@
 		</java>
 	</target>
 	
-	<target name="xls" description="Generates an XLS version of the report by converting the .jrprint file.">
+	<target name="xls" description="Generates an XLS version of the report by converting the .jrprint file using the POI library.">
 		<java classname="${class.name}" fork="true">
 			<arg value="-Txls"/>
+			<arg value="-F./build/reports/${file.name}.jrprint"/>
+			<classpath refid="classpath"/>
+		</java>
+	</target>
+
+	<target name="jxl" description="Generates an XLS version of the report by converting the .jrprint file using the JExcelApi library.">
+		<java classname="${class.name}" fork="true">
+			<arg value="-Tjxl"/>
 			<arg value="-F./build/reports/${file.name}.jrprint"/>
 			<classpath refid="classpath"/>
 		</java>
